# samokat-parser

./: Dockerfile  LICENSE  README.md  database.py  docker-compose.dev.yml  docker-compose.mac.yml  docker-compose.yml  logger.py  manage.py  parser.py  pyproject.toml  requirements.txt
docker/postgres/: init.sql
samokat_app/: asgi.py  settings.py  urls.py  wsgi.py
smk_parse/: apps.py  models.py  urls.py  views.py
smk_parse/management/commands/: fetch_categories.py  parse.py  parse_products.py  search_products.py  update_embeds.py
smk_parse/management/commands/utils/: webdriver.py
smk_parse/migrations/: 0001_initial.py  0002_alter_category_options.py  0003_product_embeddings.py  0004_rename_embeddings_product_embedding.py
