[tool.poetry]
name = "samokat-parser"
version = "0.1.0"
description = ""
authors = ["Andrew <cramatsu@icloud.com>"]
license = "WTFPL"
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.11"
amqp = "5.2.0"
asgiref = "3.8.1"
attrs = "24.2.0"
beautifulsoup4 = "4.12.3"
billiard = "4.2.1"
blinker = "1.8.2"
celery = "5.4.0"
certifi = "2024.8.30"
cffi = "1.17.1"
charset-normalizer = "3.3.2"
click = "8.1.7"
click-didyoumean = "0.3.1"
click-plugins = "1.1.1"
click-repl = "0.3.0"
colorama = "0.4.6"
colorlog = "6.8.2"
django = "5.1.2"
flask = "3.0.3"
greenlet = "3.1.1"
h11 = "0.14.0"
h2 = "4.1.0"
hpack = "4.0.0"
hyperframe = "6.0.1"
idna = "3.10"
itsdangerous = "2.2.0"
jinja2 = "3.1.4"
kombu = "5.4.2"
markupsafe = "3.0.1"
pip = "24.2"
prettytable = "3.11.0"
prompt-toolkit = "3.0.48"
psycopg2 = "2.9.9"
python-dateutil = "2.9.0.post0"
redis = "5.1.1"
requests = "2.32.3"
selenium = "4.25.0"
setuptools = "75.1.0"
six = "1.16.0"
sniffio = "1.3.1"
sortedcontainers = "2.4.0"
soupsieve = "2.5"
sqlalchemy = "2.0.35"
sqlparse = "0.5.1"
trio = "0.26.2"
trio-websocket = "0.11.1"
typing-extensions = "4.12.2"
tzdata = "2024.2"
urllib3 = "2.2.3"
vine = "5.1.0"
websocket-client = "1.8.0"
werkzeug = "3.0.4"
wheel = "0.44.0"
win-inet-pton = "1.1.0"
wsproto = "1.2.0"
zstandard = "0.23.0"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
